--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,17 +17,28 @@ input.form-control{
 }
 
 .welcome-msg{
-  @include media-breakpoint-up(lg){
-    font-size: 4rem;
-  }
-
-  @include media-breakpoint-up(md){
-      font-size: 3rem;
-  }    
+  // Medium devices (tablets, 768px and up)
+@media (max-width: 768px) { 
   font-size: 1rem;
+ }
+
+ @media (max-width : 991px){
+   font-size: 2rem;
+ }
+ 
+ @media (min-width:992px){
+   font-size: 4rem;
+ }
+  // font-size: 1rem;
   font-weight: 800;
 }
 
+.usecase-options{
+  text-align: center;
+  img{
+    margin: 16px 0 16px;
+  }
+}
   
   // $theme-colors: map-merge($theme-colors, $frinfra-colors);
 
